--- a/ARQUIVO-TRABALHO/index.html
+++ b/ARQUIVO-TRABALHO/index.html
@@ -28,6 +28,9 @@
                 <a href="#odia" class="active">Dia do noivo</a> 
               </li>
 
+              <a href="#produto-corleone" class="active">Produto Corleone</a> 
+            </li>
+
               <li>
                 <a href="#contato" class="active">contato</a>
                </li>
@@ -75,7 +78,7 @@
        <section>
         <section id="odia">
           <div class="noivo">
-            <h2 class="titulo-centralizado"> O dia do Noivo!</h2>
+            <h2 class="titulo-centralizado">  Dia do Noivo!</h2>
             <img src="diadonoivo.jpg" class="imagemnoivo">
             <p> Disponibiliazamos tres pacotes completo para o noivo padrinhos e pais </p>
                       
@@ -87,7 +90,7 @@
                         for (var i=1;i<tfrow;i++) {
                           tbRow[i]=document.getElementById('tfhover').rows[i];
                           tbRow[i].onmouseover = function(){
-                            this.style.backgroundColor = 'blue';
+                            this.style.backgroundColor = 'grey';
                           };
                           }
                       };
@@ -120,6 +123,22 @@
     </div>
    </div>
 </section>
+<section id="produto-corleone"></section>
+<div class="principal">
+  <h2 class="titulo-centralizado">Produto Corleone</h2>
+
+<div class="imagens-corleone" align="center">
+  <img src="produtowebp"  class="imgcorleone1">
+  <img src="creme.webp"  class="imgcorleone2">
+  <img src="corleone.webp"  class="imgcorleone3">
+  
+  
+
+</div>
+  <p> Desenvolvemos uma linha de Produtos Especiais para barba, cabelo e bigode.</p>
+
+
+
     <footer class="rodape">
     <h4> <p>Rua Bahia, 1258 Centro  86.690-000 - Colorado - PR</p>
         <p>E-mail: clomonteirolobato@seed.pr.gov.br</p>
